--- a/MainProject/Views/Account/Items.cshtml
+++ b/MainProject/Views/Account/Items.cshtml
@@ -1,7 +1,9 @@
 ﻿@model UserItem
 @using Microsoft.AspNetCore.Identity
 @using MainProject.Controllers
+@using Microsoft.AspNetCore.Mvc.Localization
 
+@inject IViewLocalizer Localizer
 @inject UserManager<User> UserManager
 @inject SignInManager<User> SignInManager
 @inject RoleManager<IdentityRole> RoleManager
@@ -11,16 +13,8 @@
     {
         return AccountController.dbContext.Users.First(x => x.Id == userId).Name;
     }
-
-    string GetExtraFieldName(string userId, string collectionId,
-        string extrafieldId)
-    {
-        return AccountController.dbContext.Users.First(x => x.Id == userId)
-    .Collections.First(x => x.Id == collectionId)
-    .ExtraFields.First(x => x.Id == extrafieldId).Name;
-    }
 }
-<h2>Items</h2>
+<h2>@Localizer["Items"]</h2>
 <div class="album bg-light">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -41,36 +35,36 @@
                                 <img class="bd-placeholder-img card-img-top" src="data:image;base64,@System.Convert.ToBase64String(item.Image)" width="300" height="225" role="img" />
                             }
 
-                        <div class="card-body">
-                            <h2>@item.Name</h2>
-                            <p class="card-text">@item.Description</p>
-                            @foreach (var extra in item.ExtraFieldValues)
-                            {
-                                <p>@GetExtraFieldName(item.UserId, item.UserCollectionsId,
-                                  extra.ExtraFieldId): @extra.Value</p>
-                            }
-                            @foreach (var tag in item.Tags)
-                            {
-                                <a asp-action="SearchByTag" asp-route-tag="@tag.Name">#@tag.Name</a>
-                            }
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <input name="userId" value="@item.UserId" hidden />
-                                    <input asp-for="Id" value="@item.Id" hidden />
-                                    <input asp-for="UserCollectionsId" value="@item.UserCollectionsId" hidden />
-                                    <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenItem">View</button>
-                                    @if (SignInManager.IsSignedIn(User))
-                                    {
-                                        @if (curUser.Id == item.UserId
-                                   || User.IsInRole("admin"))
+                            <div class="card-body">
+                                <h2>@item.Name</h2>
+                                <p class="card-text">@item.Description</p>
+                                @foreach (var extra in item.ExtraFieldValues)
+                                {
+                                    <p>@extra.ExtraFieldName: @extra.Value</p>
+                                }
+                                @foreach (var tag in item.Tags)
+                                {
+                                    <a asp-action="SearchByTag" asp-route-tag="@tag.Name">#@tag.Name</a>
+                                }
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <input name="userId" value="@item.UserId" hidden />
+                                        <input asp-for="Id" value="@item.Id" hidden />
+                                        <input asp-for="UserCollectionsId" value="@item.UserCollectionsId" hidden />
+                                        <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenItem">@Localizer["View"]</button>
+                                        @if (SignInManager.IsSignedIn(User))
                                         {
-                                            <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenEditCollection">Edit</button>
+                                            @if (curUser.Id == item.UserId
+                                      || User.IsInRole("admin"))
+                                            {
+                                                <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenEditCollection">@Localizer["Edit"]</button>
+                                                <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="DeleteItem" asp-controller="Account">@Localizer["Delete"]</button>
+                                            }
                                         }
-                                    }
+                                    </div>
+                                    <small class="text-muted">@item.DateOfEntered.ToString("dd MMMM yyyy")</small>
                                 </div>
-                                <small class="text-muted">@item.DateOfEntered.ToString("dd MMMM yyyy")</small>
                             </div>
-                        </div>
                         </div>
                     </div>
                 </form>
