--- a/MainProject/Views/Home/Items.cshtml
+++ b/MainProject/Views/Home/Items.cshtml
@@ -1,7 +1,9 @@
 ﻿@model UserItem
 @using Microsoft.AspNetCore.Identity
 @using MainProject.Controllers
+@using Microsoft.AspNetCore.Mvc.Localization
 
+@inject IViewLocalizer Localizer
 @inject UserManager<User> UserManager
 @inject SignInManager<User> SignInManager
 @inject RoleManager<IdentityRole> RoleManager
@@ -12,34 +14,31 @@
         return AccountController.dbContext.Users.First(x => x.Id == userId).Name;
     }
 
-    string GetExtraFieldName(string userId, string collectionId,
-        string extrafieldId)
+    string getUrlImage(string id)
     {
-        return AccountController.dbContext.Users.First(x => x.Id == userId)
-    .Collections.First(x => x.Id == collectionId)
-    .ExtraFields.First(x => x.Id == extrafieldId).Name;
+        return AccountController.cloudinary.GetResource(id).Url;
     }
 }
-<h2>Recent added items</h2>
+<h2>@Localizer["Recent added items"]</h2>
 <form>
     @foreach (var item in ViewBag.Collections)
     {
         <input name="items" value="@item.Id" hidden />
     }
-    <button asp-action="SortItem" asp-controller="Home" class="btn btn-sm btn-primary" value="Sort" name="submit"><i class="fas fa-arrow-down-a-z"></i>Sort</button>
+    <button asp-action="SortItem" asp-controller="Home" class="btn btn-sm btn-primary" value="Sort" name="submit"><i class="fas fa-arrow-down-a-z"></i>@Localizer["Sort"]</button>
 </form>
 <form>
     <select name="filterBy">
-        <option value="Name">Name</option>
-        <option value="Description">Description</option>
-        <option value="Tag">Tag</option>
+        <option value="Name">@Localizer["Name"]</option>
+        <option value="Description">@Localizer["Description"]</option>
+        <option value="Tag">@Localizer["Tag"]</option>
     </select>
     <input name="text" type="text" />
     @foreach (var item in ViewBag.Collections)
     {
         <input name="items" value="@item.Id" hidden />
     }
-    <button asp-action="FilterItem" asp-controller="Home" class="btn btn-sm btn-primary" value="Block" name="submit"><i class="fas fa-filter"></i>Filter</button>
+    <button asp-action="FilterItem" asp-controller="Home" class="btn btn-sm btn-primary" value="Block" name="submit"><i class="fas fa-filter"></i>@Localizer["Filter"]</button>
 </form>
 <div class="album bg-light">
     <div class="container">
@@ -58,7 +57,7 @@
                             }
                             else
                             {
-                                <img class="bd-placeholder-img card-img-top" src="data:image;base64,@System.Convert.ToBase64String(item.Image)" width="300" height="225" role="img" />
+                                <img class="bd-placeholder-img card-img-top" src="@getUrlImage(item.Image)" width="300" height="225" role="img" />
                             }
 
                             <div class="card-body">
@@ -67,27 +66,26 @@
                                 @foreach (var extra in item.ExtraFieldValues)
                                 {
                                     <p>
-                                        @GetExtraFieldName(item.UserId, item.UserCollectionsId,
-                                   extra.ExtraFieldId): @extra.Value
-                            </p>
-                        }
+                                        @extra.ExtraFieldName: @extra.Value
+                                    </p>
+                                }
                                 @foreach (var tag in item.Tags)
                                 {
-                                    <a asp-action="SearchByTag" asp-route-tag="@tag.Name">#@tag.Name</a>
+                                    <a asp-controller="Account" asp-action="SearchByTag" asp-route-tag="@tag.Name">#@tag.Name</a>
                                 }
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <input name="userId" value="@item.UserId" hidden />
                                         <input asp-for="Id" value="@item.Id" hidden />
                                         <input asp-for="UserCollectionsId" value="@item.UserCollectionsId" hidden />
-                                        <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenItem" asp-controller="Account">View</button>
+                                        <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenItem" asp-controller="Account">@Localizer["View"]</button>
                                         @if (SignInManager.IsSignedIn(User))
                                         {
                                             @if (curUser.Id == item.UserId
-                                                || User.IsInRole("admin"))
+                                              || User.IsInRole("admin"))
                                             {
-                                                <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenEditItem" asp-controller="Account">Edit</button>
-                                                <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="DeleteItem" asp-controller="Account">Delete</button>
+                                                <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="OpenEditItem" asp-controller="Account">@Localizer["Edit"]</button>
+                                                <button type="submit" class="btn btn-sm btn-outline-secondary" asp-action="DeleteItem" asp-controller="Account">@Localizer["Delete"]</button>
                                             }
                                         }
                                     </div>
